# cards

./: .gitignore  BUILD.bazel  Dockerfile  WORKSPACE.bazel  deps.bzl  go.mod  go.sum
cmd/autoplay/: autoplay.go
cmd/client/: main.go
cmd/deal/: BUILD.bazel  main.go
cmd/find/: find.go
cmd/observer/: observer.go
cmd/player/: BUILD.bazel  player.go
cmd/server/: BUILD.bazel  server.go
cmd/solo/: solo.go
cmd/trial/: BUILD.bazel  main.go
internal/cards/: card.go  card_test.go  cards.go
internal/game/client/: client.go  play.go
internal/game/proto/: game.pb.go  game.proto  game_grpc.pb.go
internal/game/server/: game.go  service.go
internal/trial/: BUILD.bazel  trial.go  trial_test.go
pkg/cards/: BUILD.bazel  card.go  cards.go  cards_test.go  literals.go  player.go  trick.go
pkg/client/: BUILD.bazel  client.go  flag.go  names.go
pkg/discovery/: advertise.go
pkg/game/: game.go  hearts.go
pkg/game/hearts/: basic.go  game.go  hearts.go  players.go  random.go  terminal.go  tracker.go
pkg/game/hearts/player/: basic.go  players.go  random.go  strategy.go  terminal.go  tracker.go
pkg/proto/: BUILD.bazel  game.pb.extra.go  game.pb.go  game.proto  game_grpc.pb.go
pkg/server/: BUILD.bazel  server.go  service.go
web/: main.go
