load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "server",
    srcs = ["server.go"],
    importpath = "github.com/mpsalisbury/cards/cmd/server",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/game/server",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "cards-server",
    embed = [":server"],
    visibility = ["//visibility:public"],
)
