load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "trial_lib",
    srcs = ["main.go"],
    importpath = "github.com/mpsalisbury/cards/cmd/trial",
    visibility = ["//visibility:private"],
    deps = ["//internal/trial"],
)

go_binary(
    name = "trial",
    embed = [":trial_lib"],
    visibility = ["//:__subpackages__"],
)
