load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "client",
    srcs = ["play.go"],
    importpath = "github.com/mpsalisbury/cards/internal/game/client",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/cards",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials:go_default_library",
        "@org_golang_google_grpc//credentials/insecure:go_default_library",
    ],
)
